--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: rgb(209 213 219 / 1);
     --white-text-color: hsl(213 31% 91%);
-    --red-color: rgb(255 45 32 / 1);
+    --red-text-color: rgb(255 45 32 / 1);
+    --red-text-light-color: rgb(255 45 32 / 0.6);
+    --main-bg-color: #0d102a;
+    --padding-main-left: 1.5rem;
+    --padding-main-right: 1.5rem;
+    --padding-main-top: 2rem;
+    --padding-main-bottom: 2rem;
+    --sm-font-size: 0.875rem;
+    --sm-line-height: 1.25rem;
+    --bg-light-red: #ff2d201a;
 }
 
 /* *, *::before, *::after {
@@ -18,15 +28,16 @@ body {
 }
 
 .nav_section {
-    background-color: #0d102a;
+    background-color: var(--main-bg-color);
     width: 100%;
     position: sticky;
     top: 0;
 }
+
 .nav_main {
     height: 5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: var(--padding-main-left);
+    padding-right: var(--padding-main-right);
     margin: auto;
     max-width: 1400px;
     display: flex;
@@ -48,6 +59,7 @@ body {
     width: 2rem;
     height: 2rem;
     color: rgb(255 45 32 / 1);
+    stroke: rgb(255 45 32 / 1);
 }
 
 .nav_main_text {
@@ -57,7 +69,7 @@ body {
     color: transparent;
     background-clip: text !important;
     -webkit-background-clip: text;
-    background: linear-gradient(90deg, rgba(255,45,32,1) 0%, rgba(168,85,247,1) 36%);
+    background: linear-gradient(90deg, rgba(255,45,32,1) 0%, #3b82f6 45%);
     margin-left: 0.5rem;
 }
 
@@ -91,7 +103,7 @@ body {
     transition: all 0.3s ease-in-out;
 }
 .nav_2 ul li a:hover {
-    color: var(--red-color);
+    color: var(--red-text-color);
 }
 .cv button {
     margin-left: 0.5rem;
@@ -109,7 +121,7 @@ body {
     align-items: center;
     height: 2.25rem;
     color: var(--white-text-color);
-    transition: all 0.3s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
 
 .cv button:hover {
@@ -124,90 +136,86 @@ body {
     display: none;
 }
 
-@media (max-width: 768px) {
-    /* Hamburger CSS */
-    .hamb{
-        cursor: pointer;
-        float: right;
-        padding: 40px 20px;
-        display: block;
-    }
+/* main csss */
 
-    .hamb-line {
-        background: var(--white-text-color);
-        display: block;
-        height: 2px;
-        position: relative;
-        width: 24px;
-    }
-
-    .hamb-line::before,
-    .hamb-line::after{
-        background: var(--white-text-color);
-        content: '';
-        display: block;
-        height: 92%;
-        position: absolute;
-        transition: all .2s ease-out;
-        width: 100%;
-    }
-    .hamb-line::before{
-        top: 5px;
-    }
-    .hamb-line::after{
-        top: -5px;
-    }
-
-    /* Toogle Menu Icon */
-    .side-menu:checked ~ .nav_list {
-        max-height: 500px;
-    }
-
-    .side-menu:checked ~ .hamb .hamb-line {
-        background: transparent;
-    }
-
-    .side-menu:checked ~ .hamb .hamb-line::before {
-        transform: rotate(-45deg);
-        top:0;
-    }
-    .side-menu:checked ~ .hamb .hamb-line::after {
-        transform: rotate(45deg);
-        top:0;
-    }
-
-    body:has(.side-menu:checked) {
-        overflow: hidden;
-    }
-
-    .nav_list{
-        display: flex;
-        flex-direction: column;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.5s ease-in-out;
-        width: 100%;
-        background-color: #0d102a;
-        position: absolute;
-        top: 5rem;
-        left: 0;
-        right: 0;
-        z-index: 999;
-    }
-
-    .nav_list ul{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .nav_list li{
-        margin-top: .5rem;
-        margin-bottom: .5rem;
-    }
-
-    .cv {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
-    }
+.main_section {
+    background-color: var(--main-bg-color);
 }
+
+.main_container {
+    padding-left: var(--padding-main-left);
+    padding-right: var(--padding-main-right);
+    padding-top: var(--padding-main-top);
+    padding-bottom: var(--padding-main-bottom);
+    margin: auto;
+    max-width: 1400px;
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center; */
+}
+
+.lwd_main {
+    color: var(--red-text-color);
+    background-color: var(--bg-light-red);
+    padding: 0.25rem 0.75rem;
+    width: fit-content;
+    border-radius: 9999px;
+}
+
+.tn_main {
+    font-size: 3.5rem;
+    line-height: 1;
+    font-weight: 700;
+    color: transparent;
+    background-clip: text !important;
+    -webkit-background-clip: text;
+    background: linear-gradient(90deg, rgba(255,45,32,1) 0%, #3b82f6 45%);
+}
+
+.fs_main {
+    margin-top: 1.5rem;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+    font-weight: 700;
+    color: transparent;
+    background-clip: text !important;
+    -webkit-background-clip: text;
+    background: linear-gradient(90deg, #3b82f6 0%, rgba(255,45,32,1) 45%);
+}
+
+.wd_main {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
+
+.desc_main {
+    font-size: 1.15rem;
+}
+
+.cbtn {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    font-weight: 500;
+    color: var(--white-text-color);
+    background-color: var(--red-text-color);
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+
+.cbtn:hover {
+    background-color: var(--red-text-light-color);
+}
+
+.cbtn-danger {
+    color: var(--white-text-color);
+    background-color: var(--red-text-color);
+}
+
+.main_img {
+    width: 100%;
+    max-height: 420px;
+    object-fit: cover;
+    border-radius: 1rem;
+    /* border-bottom: 4px solid var(--red-text-color); */
+}
+
