--- a/css/style.css
+++ b/css/style.css
@@ -672,3 +672,97 @@ a {
     position: absolute;
     border-radius: 9999px;
 }
+
+.exp_section {
+    /* background-color: var(--main-bg-color); */
+    background-color: #030711;
+}
+
+.exp_container {
+    padding-left: var(--padding-main-left);
+    padding-right: var(--padding-main-right);
+    padding-top: var(--padding-main-top);
+    padding-bottom: var(--padding-main-bottom);
+    max-width: 1400px;
+    margin: auto;
+}
+
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 4px;
+    background-color: red;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -2px;
+}
+
+.timeline_red_line {
+    height: 0.25rem;
+    background-color: var(--red-text-color);
+    border-radius: 5px;
+}
+
+.timeline-item {
+    padding: 0 40px 20px 40px;
+    position: relative;
+    width: 50%;
+}
+
+.timeline-item::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: -10px;
+    background-color: red;
+    border: 4px solid #0d0d1a;
+    /* top: 15px; */
+    top: 0;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.timeline_card {
+    /* border-color: rgb(55 65 81 / 1); */
+    border: 2px solid rgb(55 65 81 / 0.4);
+    border-radius: 5px;
+    border-top: 0;
+    /* padding: 1rem; */
+}
+
+.timeline_card_content {
+    padding: 1rem;
+}
+
+.timeline_card h3 {
+
+}
+
+
+.timeline_card p, .card li {
+  
+}
+
+.timeline_card ul {
+
+}
+
+.timeline-left {
+    left: 0;
+}
+
+.timeline-right {
+    left: 50%;
+}
+
+.timeline-item.timeline-right::after {
+    left: -10px;
+}
