--- a/css/style.css
+++ b/css/style.css
@@ -832,3 +832,126 @@ ul.exp_details_list li {
 .ico-voilet {
     stroke: rgb(119 123 179 / 1);
 }
+
+.con_section {
+    /* background-color: var(--main-bg-color); */
+    /* background-color: #030711; */
+    background-color: hsl(224 71% 4%);
+}
+
+.con_container {
+    padding-left: var(--padding-main-left);
+    padding-right: var(--padding-main-right);
+    padding-top: var(--padding-main-top);
+    padding-bottom: var(--padding-main-bottom);
+    max-width: 1400px;
+    margin: auto;
+}
+
+.con_head_1 {
+    font-weight: 700;
+    padding-bottom: 1.5rem;
+}
+
+.con_ico {
+    padding: 0.7rem;
+    background-color: rgba(255, 45, 32, 0.1);
+    border-radius: 500px;
+    margin-right: 1rem;
+}
+
+.con_ico svg {
+    stroke: rgb(255 45 32 / 0.9);
+    /* width: 1rem;
+    height: auto; */
+}
+
+.con-desc {
+    padding: 1.5rem;
+    background-color: hsl(var(--card-bg-dark-color) / 0.4);
+    border-color: rgb(31 41 55 / 1);
+    border-width: 1px;
+    border-radius: 0.5rem;
+}
+
+.con-desc h5 {
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.con-desc p {
+    color: rgb(209 213 219 / 1);
+    font-size: .875rem;
+    line-height: 1.25rem;
+}
+
+.ct_head_sub_1 {
+    color: rgb(156 163 175);
+    margin-bottom: 0;
+}
+
+.ct_head_sub_2 {
+    font-size: 1.1rem;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
+.c_form_container {
+    padding: 1.5rem;
+    background-color: hsl(var(--muted) / .2);
+    --tw-border-opacity: 1;
+    border-color: rgb(31 41 55 / var(--tw-border-opacity));
+    border-width: 1px;
+    border-radius: 0.5rem;
+}
+
+.form_header {
+    font-weight: 700;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin-bottom: 1.5rem;
+}
+
+.input_div {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.input_div label {
+    color: rgb(156 163 175 / 1);
+    font-weight: 500;
+    font-size: .95rem;
+    line-height: 1.25rem;
+    margin-bottom: .25rem;
+}
+.input_div input,textarea {
+    font-size: .95rem;
+    line-height: 1.25rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-left: .75rem;
+    padding-right: .75rem;
+    background-color: hsl(var(--muted));
+    border-color: rgb(55 65 81 / 1);
+    border-width: 1px;
+    border-radius: calc(0.5rem - 2px);
+    width: 100%;
+    /* height: 2.5rem; */
+}
+
+.input_err {
+    margin-bottom: 0;
+    color: var(--red-text-color);
+    font-size: 0.85rem;
+}
+
+.cust_submit {
+    margin: 2rem auto;
+    width: 100%;
+}
+
+.cust_submit svg {
+    height: 0.95rem;
+    margin: auto 0.25rem;
+}
