--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -84,6 +84,10 @@
         margin-bottom: .5rem;
     }
 
+    .main_img_div {
+        padding: 0.1rem;
+    }
+
     .cv {
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
@@ -98,11 +102,11 @@
     }
 
     .timeline-item.timeline-left::after {
-        left: -2px;
+        left: 0px;
     }
 
     .timeline-item.timeline-right::after {
-        left: -2px;
+        left: 0px;
     }
 
     .timeline-item {
@@ -129,5 +133,35 @@
 
     .timeline_card h3 {
         font-size: 1rem;
+    }
+
+    .footer_con_one {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer_main_text {
+        font-size: 1.3rem;
+        font-weight: 700;
+        line-height: 1.3rem;
+        margin-left: 0.4rem;
+    }
+    
+    .foot_link_ico_list {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+    
+    .foot_a {
+        background-color: hsl(var(--muted));
+        border-radius: 9999px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.3s ease-in-out;
+        width: 2.5rem;
+        height: 2.5rem;
     }
 }
