--- a/css/style.css
+++ b/css/style.css
@@ -1099,7 +1099,7 @@ ul.exp_details_list li {
 .scrolltotop {
     position: fixed;
     bottom: 2.5rem;
-    right: 2.5rem;
+    right: 1.75rem;
     background-color: rgb(255 45 32 / 1);
     border-radius: 100%;
     padding: 0.25rem;
@@ -1142,3 +1142,47 @@ ul.exp_details_list li {
     height: 1.8rem;
     width: 1.9rem;
 }
+
+.cust-animation-div {
+    transform: translateY(30px);
+    opacity: 0;
+    will-change: transform, opacity;
+}
+
+.cust-animate-up {
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.6s ease;
+}
+
+.text-typing {
+    display: inline-block;
+    border-right: 2px solid white;
+    padding-right: 1ch;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+    animation: typing 3.5s steps(13) 1s forwards, blink-caret 0.75s step-end 4s forwards;
+}
+  
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 13ch;
+    }
+}
+
+@keyframes blink-caret {
+    0% {
+      border-color: white;
+    }
+    99% {
+      border-color: white;
+    }
+    100% {
+      border-color: transparent;
+    }
+}
+  
