--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@
     --card-bg-dark-color: 217.2 32.6% 17.5%;
     --padding-main-left: 1.5rem;
     --padding-main-right: 1.5rem;
-    --padding-main-top: 2rem;
-    --padding-main-bottom: 2rem;
+    --padding-main-top: 1.75rem;
+    --padding-main-bottom: 1.75rem;
     --sm-font-size: 0.875rem;
     --sm-line-height: 1.25rem;
     --bg-light-red: #ff2d201a;
@@ -557,6 +557,16 @@ a {
     object-fit: cover;
     border-radius: 1rem;
     /* border-bottom: 4px solid var(--red-text-color); */
+}
+
+.con-img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 1rem;
 }
 
 .cont_heading {
