--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -1,4 +1,8 @@
 @media (max-width: 1450px) {
+    .cv_svg {
+        height: 1rem;
+    }
+
     .main_img_card {
         top: 4rem;
         right: -5px;
@@ -32,5 +36,9 @@
         width: 0.4rem;
         border-radius: 9999px;
         background-color: yellow;
+    }
+
+    .tn_main {
+        font-size: 3.1rem;
     }
 }
