--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -197,3 +197,23 @@
         height: 2.5rem;
     }
 }
+
+@media (max-width: 768px) {
+
+    .tn_main {
+        font-size: 2.6rem;
+    }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 820px) {
+    .tn_main {
+        font-size: 3rem !important;
+    }
+} 
+
+@media only screen and (min-width: 821px) and (max-width: 900px) {
+    .tn_main {
+        font-size: 3rem !important;
+    }
+} 
